Fixed visual errors